[project]
name = "repro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tim Van Wassenhove", email = "github@timvw.be" }
]
dependencies = [
    "lancedb>=0.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/repro"]
